[gd_scene load_steps=2 format=3 uid="uid://ddrrm6r3cxfcx"]

[ext_resource type="Script" path="res://Scripts/upgrade_option.gd" id="1_6hw1t"]

[node name="UpgradeOption" type="ColorRect"]
custom_minimum_size = Vector2(280, 70)
anchors_preset = -1
anchor_right = 0.219
anchor_bottom = 0.097
offset_right = -0.320007
offset_bottom = 0.159996
color = Color(0.568627, 0.568627, 0.568627, 1)
script = ExtResource("1_6hw1t")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 37.0
offset_bottom = 37.0
color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="Icon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 28.0
offset_bottom = 28.0

[node name="LblName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_top = 5.0
offset_right = 15.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Name"
vertical_alignment = 1

[node name="LblDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -5.0
offset_right = 135.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 13
text = "Description of item"

[node name="LblLevel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 5.0
offset_right = -18.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Level : 1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
